--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Interested in the magic where art meets code? Let’s create together!          
     <a href="mailto:rjsrkdvlftn@gmail.com">rjsrkdvlftn@gmail.com</a>
     <span>|</span>
     <span>GitHub:</span>
-    <a href="#">github.com/j-inha</a>
+    <a href="#">github.com/tokame-dev</a>
     <span>|</span>
     <span>Instagram:</span>
     <a href="#">@your-instagram</a>
