--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
             <div class="profile-logo">
                 <img src="images/profile-logo.webp" alt="프로필 로고" class="logo-img" />
             </div>
-            <h1>TOKAME's Portfolio</h1>
+            <h1>TOKAME's Work</h1>
             <p class="intro">
-Hello! I combine 3D modeling and development to bring original ideas to life and share my creative experiences.
-Interested in the magic where art meets code? Let’s create together!            </p>
+            </p>
             <nav>
                 <ul>
                     <li><a href="#portfolio">PORTPOLIO</a></li>
